--- a/xeon/xeon.vcxproj
+++ b/xeon/xeon.vcxproj
@@ -87,6 +87,12 @@
   <ItemGroup>
     <ClCompile Include="glad.c" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="math\math_func.cpp" />
+    <ClCompile Include="math\math_structs.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="math\math.h" />
+    <ClInclude Include="mesh\mesh_data.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
