--- a/xeon/xeon.vcxproj
+++ b/xeon/xeon.vcxproj
@@ -65,6 +65,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>User32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -82,6 +83,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>User32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -89,10 +91,18 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="math\math_func.cpp" />
     <ClCompile Include="math\math_structs.cpp" />
+    <ClCompile Include="mesh\mesh_data.cpp" />
+    <ClCompile Include="wnd\box.cpp" />
+    <ClCompile Include="wnd\utils.cpp" />
+    <ClCompile Include="wnd\wnd.cpp" />
+    <ClCompile Include="wnd\wndcreation.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="math\math.h" />
     <ClInclude Include="mesh\mesh_data.h" />
+    <ClInclude Include="wnd\box.h" />
+    <ClInclude Include="wnd\wnd.h" />
+    <ClInclude Include="wnd\wndlist.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
