--- a/xeon/xeon.vcxproj.filters
+++ b/xeon/xeon.vcxproj.filters
@@ -16,6 +16,12 @@
     <Filter Include="mesh">
       <UniqueIdentifier>{b549dd4f-5621-4044-8300-a3f2df888a91}</UniqueIdentifier>
     </Filter>
+    <Filter Include="wnd">
+      <UniqueIdentifier>{0f8a8b09-24ac-414d-8159-adfc3a2f53e2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="wnd\box">
+      <UniqueIdentifier>{a5e73229-da3f-46b3-9694-5f41e02df6c1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="glad.c">
@@ -24,19 +30,89 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="math\math_structs.cpp">
-      <Filter>math</Filter>
+    <ClCompile Include="wnd\wnd.cpp">
+      <Filter>wnd</Filter>
     </ClCompile>
-    <ClCompile Include="math\math_func.cpp">
-      <Filter>math</Filter>
+    <ClCompile Include="wnd\utils.cpp">
+      <Filter>wnd</Filter>
+    </ClCompile>
+    <ClCompile Include="wnd\wndcreation.cpp">
+      <Filter>wnd</Filter>
+    </ClCompile>
+    <ClCompile Include="wnd\wndopengl.cpp">
+      <Filter>wnd</Filter>
+    </ClCompile>
+    <ClCompile Include="math\camera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="math\math.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="math\random.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="math\ray.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="shapes\shape_list.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="shapes\sphere.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="gpu\shader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="gpu\texture.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="math\math.h">
       <Filter>math</Filter>
     </ClInclude>
-    <ClInclude Include="mesh\mesh_data.h">
-      <Filter>mesh</Filter>
+    <ClInclude Include="wnd\wnd.h">
+      <Filter>wnd</Filter>
     </ClInclude>
+    <ClInclude Include="wnd\wndlist.h">
+      <Filter>wnd</Filter>
+    </ClInclude>
+    <ClInclude Include="wnd\box.h">
+      <Filter>wnd\box</Filter>
+    </ClInclude>
+    <ClInclude Include="gpu\shader.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="math\camera.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="math\hitable.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="math\math.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="math\random.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="math\ray.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="shapes\shape.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="shapes\shape_list.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="shapes\sphere.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="gpu\texture.h">
+      <Filter>math</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders\basic_vertex.vert" />
+    <None Include="shaders\basic_fragment.frag" />
   </ItemGroup>
 </Project>
